--- a/.github/workflows/flow.yaml
+++ b/.github/workflows/flow.yaml
@@ -29,5 +29,6 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist   # or ./build if your Vite project outputs build/
+          github_token: ${{ GH_PAT }}   
+          publish_dir: ./dist                  
+          force_orphan: true                  
