--- a/.github/workflows/flow.yaml
+++ b/.github/workflows/flow.yaml
@@ -30,5 +30,5 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GH_PAT }}   
-          publish_dir: ./dist             
+          publish_dir: ./build          
           force_orphan: true                  
